fixed text-align

--- a/blocks/lead-block/__title/lead-block__title.css
+++ b/blocks/lead-block/__title/lead-block__title.css
@@ -1,3 +1,4 @@
 .lead-block__title {
 	margin: 0 0 24px 0;
+	width: 90%;
 }
