--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 	padding: 50px 0;
 }
 .page__footer {
-	margin: 0 auto;
 }
 .footer__copyright {
+	padding: 0;
+	margin: 0 auto;
 	width: 90%;
 	text-align: center;
-	font-weight: 900;
+	font-weight: 700;
 	font-size: 28px;
 }
